# webrtc-p2p

./: .gitignore  Cargo.toml  README.md  webrtc  webrtcbin
src/: client.rs  conn.rs  console_listener.rs  gstreamer_actor.rs  main.rs  main1.rs  nats_actor.rs  pipeline.rs  sendrecv.rs  utils.rs  web_socket.rs  webrtc_actor.rs  webrtcbin_actor.rs
